--- a/app/globals.css
+++ b/app/globals.css
@@ -98,7 +98,7 @@
     --foreground: hsl(180 30% 93%);
     --card:  rgb(15 23 42) ;
     --card-foreground: hsl(180 30% 93%);
-    --popover: hsl(186 32% 14%);
+    --popover:  rgb(15 23 42) ;
     --popover-foreground: hsl(180 30% 93%);
     --primary: hsl(var(--brand));
     --primary-foreground: hsl(var(--brand-contrast));
